# OpenCAN

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/can-kvaser/: Cargo.toml
crates/can-kvaser/src/: lib.rs
crates/can-pcan/: Cargo.toml
crates/can-pcan/src/: lib.rs
crates/can-socketcan/: Cargo.toml
crates/can-socketcan/src/: lib.rs
crates/can-traits/: Cargo.toml  README.md
crates/can-traits/src/: error.rs  kvaser.rs  lib.rs  monitor.rs  pcan.rs  recovery.rs  socketcan.rs  zlg.rs
crates/can-zlg/: Cargo.toml
crates/can-zlg/src/: lib.rs
crates/canopen-core/: Cargo.toml
crates/canopen-core/src/: concrete_od.rs  error.rs  frame.rs  lib.rs  node_id.rs  od.rs  pdo.rs  sdo_abort.rs  stack.rs  testing.rs
crates/canopen-core/src/eds/: builder.rs  mod.rs  model.rs  parser.rs
crates/canopen-core/src/protocol/: mod.rs
crates/canopen-core/src/protocol/emcy/: mod.rs
crates/canopen-core/src/protocol/heartbeat/: mod.rs
crates/canopen-core/src/protocol/nmt/: mod.rs
crates/canopen-core/src/protocol/pdo/: config.rs  dynamic.rs  event.rs  mod.rs  sync.rs
crates/canopen-core/src/protocol/sdo/: abort.rs  client.rs  enhanced_server.rs  mod.rs  multi_client.rs  recovery.rs  server.rs
crates/canopen-ds301/: Cargo.toml
crates/canopen-ds301/src/: adapter.rs  emcy.rs  heartbeat.rs  lib.rs  nmt.rs  pdo.rs  pdo_config.rs  sdo.rs  sdo_server.rs  stack.rs
crates/canopen-ds301/src/ds402/: control.rs  mod.rs
crates/canopen-ds301/src/ds402/modes/: csp.rs  cst.rs  csv.rs  homing.rs  mod.rs  pp.rs  pt.rs  pv.rs
crates/canopen-ds301/tests/: integration.rs
crates/canopen-ds402/: Cargo.toml
crates/canopen-ds402/src/: control.rs  lib.rs  state_machine.rs
crates/canopen-ds402/src/ds402/: control.rs  error.rs  mod.rs  mode_validator.rs  pdo_templates.rs  state_machine.rs
crates/canopen-ds402/src/ds402/modes/: csp.rs  cst.rs  csv.rs  homing.rs  ip.rs  mod.rs  pp.rs  pt.rs  pv.rs
crates/canopen-ds402/src/modes/: csp.rs  cst.rs  csv.rs  homing.rs  mod.rs  pp.rs  pt.rs  pv.rs
crates/canopen-ds402/tests/: integration.rs
crates/canopen-eds/: Cargo.toml
crates/canopen-eds/src/: builder.rs  lib.rs  model.rs  parser.rs
crates/canopen-master/: Cargo.toml
crates/canopen-master/src/: adapter.rs  emergency_handler.rs  heartbeat_monitor.rs  lib.rs  nmt_state_machine.rs  node_manager.rs  sdo_multi_client.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  backend.rs  helpers.rs  lib.rs  main.rs  state.rs  views.rs
crates/gui/src/backend/: command.rs  event.rs  mock.rs  mod.rs  real.rs
crates/gui/src/state/: bus.rs  connection.rs  ds402.rs  log.rs  message.rs  mod.rs  node.rs  protocol.rs  sdo.rs  tab.rs
crates/gui/src/views/: context_menu.rs  detail_panel.rs  dialog.rs  mod.rs  node_panel.rs  statusbar.rs  toolbar.rs
crates/gui/src/views/can/: bus_statistics.rs  error_frames.rs  frame_monitor.rs  mod.rs
crates/gui/src/views/canopen/: ds402.rs  emcy.rs  heartbeat.rs  mod.rs  network.rs  pdo.rs  sdo.rs  sync.rs  trend_chart.rs
docs/: TODO.md  crate-review-2026-06-06.md  developer-guide.md  user-guide.md
docs/agents/: domain.md  triage-labels.md
docs/spark/: 2026-06-06-opencan-audit.md  2026-06-06-opencan-completion-design.md  2026-06-06-opencan-design.md  2026-06-06-phase12-core-features-design.md  2026-06-06-tauri-gui-redesign-design.md  2026-06-06-ui-ux-design.md  2026-06-07-can-hardware-backends-design.md  2026-06-07-gui-layout-redesign-design.md  2026-06-08-frontend-enhancements-design.md
frontend/: biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assets/styles/: globals.css
frontend/src/components/can/: BusStatsCards.tsx  ErrorFrameList.tsx  FrameTable.tsx  index.ts
frontend/src/components/common/: ConnectionDialog.tsx  DataTable.tsx  EdsLoader.tsx  NodeCard.tsx  Waveform.tsx  index.ts
frontend/src/components/ds402/: ControlPanel.tsx  ModeSelector.tsx  StateMachine.tsx  StateMachineFlow.tsx  WaveformDisplay.tsx  index.ts
frontend/src/components/layout/: BottomPanel.tsx  DetailPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TopBar.tsx
frontend/src/hooks/: useCommands.ts  useFrameStream.ts  useKeyboardShortcuts.ts  usePdoStream.ts  useRecording.ts  useStreams.ts
frontend/src/lib/: protocol-decoder.ts  script-engine.ts  store.test.ts  store.ts  tauri.ts  utils.test.ts
frontend/src/pages/CAN/: BusStatistics.tsx  ErrorFrames.tsx  FrameMonitor.tsx  SendPanel.tsx
frontend/src/pages/CANOpen/: Ds402Control.tsx  EmcyMonitor.tsx  HeartbeatMonitor.tsx  NetworkOverview.tsx  NetworkTopology.tsx  NodeDetail.tsx  PdoMonitor.tsx  ScriptEditor.tsx  SdoExplorer.tsx  SyncManagement.tsx
frontend/src/pages/Recording/: SessionPlayer.tsx  SessionRecorder.tsx
frontend/src/pages/Settings/: ConnectionSettings.tsx  EdsManagement.tsx
frontend/src/types/: can.ts  canopen.ts  ds402.ts  recording.ts  types.test.ts
opencan-gui/: Cargo.toml
opencan-gui/src-tauri/: Cargo.toml  tauri.conf.json
opencan-gui/src-tauri/capabilities/: main.json
opencan-gui/src-tauri/src/: main.rs  state.rs
opencan-gui/src-tauri/src/channels/: mod.rs
opencan-gui/src-tauri/src/commands/: connection.rs  ds402.rs  eds.rs  mod.rs  nmt.rs  pdo.rs  recording.rs  sdo.rs  sync.rs
research/: can-hardware-sdks.md  can-header-raw-urls.md  can-header-urls.md
