[package]
name = "opencan-gui"
description = "OpenCAN Tauri GUI application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencan-can-traits = { path = "../crates/can-traits" }
opencan-canopen-core = { path = "../crates/canopen-core" }
opencan-canopen-ds301 = { path = "../crates/canopen-ds301", features = ["ds402"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"

[features]
default = []
socketcan = ["opencan-can-traits/socketcan"]
kvaser = ["opencan-can-traits/kvaser"]
pcan = ["opencan-can-traits/pcan"]
zlg = ["opencan-can-traits/zlg"]
eds = ["opencan-canopen-core/eds"]
