[package]
name = "opencan-can-traits"
description = "CAN bus trait abstraction and hardware backends for OpenCAN"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
socketcan = { version = "3.5", features = ["tokio"], optional = true }
libloading = { version = "0.8", optional = true }

[features]
socketcan = ["dep:socketcan"]
kvaser = ["dep:libloading"]
pcan = ["dep:libloading"]
zlg = ["dep:libloading"]
