[package]
name = "opencan-canopen-core"
description = "Core traits and types for CANOpen protocol stack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
testing = ["tokio"]
eds = []

[dev-dependencies]
tokio = { workspace = true }
