[package]
name = "opencan-canopen-ds301"
description = "CANOpen DS301 protocol implementation (NMT/SDO/PDO/EMCY/Heartbeat)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencan-canopen-core = { path = "../canopen-core", features = ["testing"] }
opencan-can-traits = { path = "../can-traits" }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
ds402 = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time"] }
