[package]
name = "opencan-canopen-ds402"
description = "CANOpen DS402 motion control profile"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencan-canopen-core = { path = "../canopen-core" }
opencan-canopen-ds301 = { path = "../canopen-ds301" }
thiserror = { workspace = true }

[features]
default = ["ds402"]
ds402 = []
ds402-pp = ["ds402"]
ds402-pv = ["ds402"]
ds402-csp = ["ds402"]
