[package]
name = "opencan-gui"
description = "OpenCAN GUI application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencan-can-traits = { path = "../can-traits" }
opencan-canopen-core = { path = "../canopen-core" }
opencan-canopen-ds301 = { path = "../canopen-ds301" }
opencan-canopen-ds402 = { path = "../canopen-ds402" }
opencan-canopen-eds = { path = "../canopen-eds", optional = true }
opencan-can-socketcan = { path = "../can-socketcan", optional = true }
opencan-can-kvaser = { path = "../can-kvaser", optional = true }
opencan-can-pcan = { path = "../can-pcan", optional = true }
opencan-can-zlg = { path = "../can-zlg", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["socketcan"]
socketcan = ["opencan-can-socketcan"]
kvaser = ["opencan-can-kvaser"]
pcan = ["opencan-can-pcan"]
zlg = ["opencan-can-zlg"]
eds = ["opencan-canopen-eds"]
