[package]
name = "opencan-gui"
description = "OpenCAN GUI application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencan"
path = "src/main.rs"

[dependencies]
opencan-can-traits = { path = "../can-traits" }
opencan-canopen-core = { path = "../canopen-core" }
opencan-canopen-ds301 = { path = "../canopen-ds301" }
opencan-canopen-ds402 = { path = "../canopen-ds402" }
opencan-canopen-eds = { path = "../canopen-eds", optional = true }
opencan-can-socketcan = { path = "../can-socketcan", optional = true }
opencan-can-kvaser = { path = "../can-kvaser", optional = true }
opencan-can-pcan = { path = "../can-pcan", optional = true }
opencan-can-zlg = { path = "../can-zlg", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI framework
iced = { version = "0.13", features = ["tokio"] }

[features]
default = []
socketcan = ["dep:opencan-can-socketcan"]
kvaser = ["dep:opencan-can-kvaser"]
pcan = ["dep:opencan-can-pcan"]
zlg = ["dep:opencan-can-zlg"]
eds = ["dep:opencan-canopen-eds"]
