[package]
name = "opencan-gui"
description = "OpenCAN GUI application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencan"
path = "src/main.rs"

[dependencies]
opencan-can-traits = { path = "../can-traits" }
opencan-canopen-core = { path = "../canopen-core" }
opencan-canopen-ds301 = { path = "../canopen-ds301", features = ["ds402"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI framework
iced = { version = "0.13", features = ["tokio", "canvas"] }

[features]
default = []
socketcan = ["opencan-can-traits/socketcan"]
kvaser = ["opencan-can-traits/kvaser"]
pcan = ["opencan-can-traits/pcan"]
zlg = ["opencan-can-traits/zlg"]
eds = ["opencan-canopen-core/eds"]
