[package]
name = "opencan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "opencan"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
opencan-can-traits = { path = "../../crates/can-traits" }
opencan-canopen-core = { path = "../../crates/canopen-core", features = ["testing"] }
opencan-canopen-ds301 = { path = "../../crates/canopen-ds301", features = ["ds402"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
socketcan = ["opencan-can-traits/socketcan"]
kvaser = ["opencan-can-traits/kvaser"]
pcan = ["opencan-can-traits/pcan"]
zlg = ["opencan-can-traits/zlg"]
eds = ["opencan-canopen-core/eds"]
